syntax = "proto3";
package PB.ClassDef;

// 玩家绑定的支付信息
message PayChannelAccount{
  int32 id = 1; //id
  int32 pay_channel_id = 2;  //支付渠道id
  string name = 3;  //持卡人姓名/实名人姓名
  string card_number = 4;  //银行卡卡号/支付宝账号
  string bank_name = 5;  //银行名称
}

//"当前玩家自己的信息"
message SelfAccount{
  //用户Id ( 随机 8 位整数 )
  int32 id = 1;
  //原始用户名 唯一( GUID )
  string username = 2;
  //昵称 唯一( 默认用某种规则生成 )
  string nickname = 3;
  //账号 如果空就是没有设置
  string account_name = 4;
  //头像
  int32 avatar_id = 5;
  //电话号码 唯一( 默认填充 username GUID )
  string phone = 6;
  //账户余额( 保留4位小数位, 进部分游戏时会被清0, 结束时会退款返还 )
  double money = 7;
  //锁定金币
  double money_gift = 8;
  //保险箱( 玩家可在账户余额间搬运数据 )
  double money_safe = 9;
  //锁定金币保险箱
  double money_gift_safe = 10;
  //累计充值金额
  double total_recharge = 11;
  //累计退款金额
  double total_refund = 12;
  //支付渠道基表id
  int32 pay_channel_id = 13;
  //是否有退款权限(1有退款权限)
  int32 has_refund_purview = 14;
  //玩家是否已设置赠送金币密码(1已设置)
  int32 is_gift_money_password = 15;
  //玩家是否已获赠金币(1已赠送)
  int32 is_system_gift_money = 16;
  //玩家是否是工会会长
  int32 is_promotion_master = 17;
  //玩家是否已是代理(1=是)
  int32 have_promotion = 18;
  //玩家是否有赠送金币权限(1有)
  int32 has_gift_money_purview = 19;
  //这次登录是否SHOW每日签到(1=是)
  int32 is_sign_in_gave = 20;
  //是否显示签到按钮(1=显示)
  int32 is_shows_sign_in_gave_button = 21;
  //退款最小金额
  double refund_min_money = 22;
  //退款保底金额
  double refund_min_remain_money = 23;
  //退款金额增幅
  double refund_margin = 24;
  //中大奖锁 1=锁
  int32 is_big_win_lock = 25;
  //可配置多少张银行卡
  int32 bank_card_count = 26;
  //玩家绑定的支付信息
  repeated PayChannelAccount pay_channel_accounts = 27;
  //锁定金币生产总值(明码)
  double amount_of_gift = 28;
  //累积洗码总值(游戏中获得)
  double amount_of_wash_code = 29;
  //vip 等级 -1=没有vip
  int32 vip_level = 31;
  //玩家是否是银商
  int32 is_businessman = 30;
  //充值类型(A,B号),A=0,B=1,A号只允许常规充值,B号只允许虚拟钱包充值
  int32 virtual_coin_status = 32;
  //是否是试玩账号
  int32 is_experience = 33;
  //玩家邮箱
  string email = 34;
  //是否绑定人脸识别
  bool face_bind = 35;
  //无限代理上级id 如果==0 那么表示没有
  int32 superior_id = 36;
}

//VIP信息
message Vip{
  //等级
  int32 id = 1;
  //升级需要达到的洗码值
  double enough_wash = 2;
  //捕鱼收益千分比
  double fish_per_millage_value = 3;
  //老虎机收益千分比
  double slots_per_millage_value = 4;
  //升级赠送洗码金币
  double levelup_gift = 5;
}

//老虎机倍率区间
message EntryConditions{
  //算法级别ID
  int32 id = 1;
  //押注区间:最小值
  double spinMinMoney = 2;
  //押注区间:最大值
  double spinMaxMoney = 3;
  //进入该算法区间的最小值
  double enterMinMoney = 4;
  //游戏等级进入转换比例
  int32 exchange_coin_ratio=6;
  //描述名称
  string desc = 5;
};


//老虎机游戏的Level配置
message GameEntryConditions{
  //游戏Id
  int32 game_id = 1;
  //当前老虎机游戏的level
  repeated EntryConditions entry_conditions_list = 2;
}

//码值等级
message GiftCfg{
  //明码等级
  int32 id = 1;
  //需要达到的明码值
  double enough_gift = 2;
  //收益千分比
  double per_millage_value = 3;
  //升级赠送金币
  double levelup_value = 4;
}


//按钮开关
message ButtonSettings{
  //按钮id
  int32 key = 1;
  //是否开启 1=开启 0=关闭
  int32 is_open = 2;
}


//返回活动状态
message ActivityStatus{
  //类型,1=洗码赠送绑定金币活动
  int32 id = 1;
  //类型,1=打开
  int32 is_open = 2;
  //活动配置
  string config = 3;
}


//捕鱼游戏级别明细
message GameCatchFishLevelInfo {
  int32 levelId = 1;
  //炮值(从)(游戏内金币)
  int64 minBet = 2;
  //炮值(到)(游戏内金币)
  int64 maxBet = 3;
  //最低准入金额
  double minMoney = 4;
  //money 自动退款成 coin 要 乘除 的系数
  int32 exchangeCoinRatio = 5;
}



//所有座位玩家列表
message RoomPlayers{
  //用户Id ( 随机 8 位整数 )
  int32 id = 1;
  //昵称 唯一( 默认用某种规则生成 )
  string nickname = 2;
  //头像
  int32 avatar_id = 3;
  //账户余额( 保留4位小数位, 进部分游戏时会被清0, 结束时会退款返还 )
  double money = 4;
  //是否机器人(1机器人)
  int32 is_robot = 5;
}

//房间玩家信息
message GameCatchFishRoomInfo{
  //房间id
  int32 room_id = 1;
  //所有座位玩家列表(定长数组)
  repeated RoomPlayers players = 2;
}


//申请退款表
message RefundInfo{
  //退款订单号( 时间戳 )
  int64 refund_id = 1;
  //帐号id
  int32 account_id = 2;
  //退款金额
  double money = 3;
  //手续费
  double server_fee_money = 4;
  //请求退款的实名
  string cash_name = 5;
  //退款请求的实名账号
  string cash_account = 6;
  //如果是银行退款，则会显示银行名称
  string cash_bank_name = 7;
  //0 打款成功或者退币中，1 退币成功
  int32 return_pay_status = 8;
  //操作状态(0=apply; 1=success; 2=failed;)
  int32 state = 9;
  //操作描述
  string description = 10;
  //退款申请时间
  int64 create_time = 11;
  //最后处理时间
  int64 updated_time = 12;
  //支付渠道基表id，1 支付宝，2 银行卡
  int32 pay_channel_id = 13;
  //退款前玩家的账户金额
  double before_money = 14;
  //退款前玩家的保险箱金额
  double before_money_safe = 15;
  //退款后玩家金币
  double after_money = 16;
  //退款后玩家保险箱金币
  double after_money_safe = 17;
  //是否为异常订单,0不是，1是
  int32 is_exception = 18;
  // IP地址
  string ip = 19;
  // 区域
  string ip_area = 20;
}


//公告
message Notice{
  //id
  int32 id = 1;
  //标题
  string title = 2;
  //内容
  string content = 3;
  //图片url(多个图片用逗号分隔)
  string urls = 4;
  //发件人
  string sender = 5;
  //创建时间
  int64 create_time = 6;
  //是否已读(0未读, 1已读)
  int32 is_read = 7;
  //1公告，2邮件)
  int32 type = 8;
  //1全服公告，2大厅公告)
  int32 notice_type = 9;
  //是否弹出显示(1弹出显示)
  int32 is_show = 10;
  //对应模板key
  string template_key = 11;
}


//支付方式信息
message PayChannel{
  //支付方式id
  int32 id = 1;
  //支付方式名称
  string name = 2;
  //是否添加识别金额
  int32 is_accuracy = 3;
  //汇率
  double exchange = 4;
}

//VIP方式
message VipChannel{
  // 渠道id
  int32 id = 1;
  //代理昵称
  string nickname = 2;
  //银行名称
  string bank_name = 3;
  //卡号
  string account = 4;
  //聊天方式 1：line2：Messenger3：twitter4：viber5：WhatsApp6：zalo
  int32 type = 5;
  //是否显示中(1显示中)
  int32 enabled = 6;
  //描述
  string description = 7;
  //上线时间
  int64 create_time = 8;
  //支付渠道Id
  int32 pay_channel_id = 9;
  //根据金额选择银行卡用
  int64 money_level = 10;
  //@VIP等级筛选
  int32 vip_level = 11;
}

//配置支付渠道金额
message ConfigChannelMoney{
  //支付渠道Id
  int32 pay_channel_id = 1;
  //金额
  int32 money = 2;
}


//google充值配置
message GoogleMoney{
  //产品Id
  string product_id = 1;
  //所得金币
  double money = 2;
  //美元
  double dollar = 3;
}

//apple充值配置
message AppleMoney{
  //产品Id
  string product_id = 1;
  //所得金币
  double money = 2;
  //美元
  double dollar = 4;
  //配置
  string config = 3;
}


//我的推广
message PromotionDetail{
  //推广链接
  string link_url = 1;
  //推广二维码
  string qrcode_url = 2;
  //推广码
  string promotion_code = 3;
}

//我的利润
message PromotionProfit{
  //还有几个分钟后才能领取
  int32 have_give_minute = 1;
  //收益
  double profit_wash_code = 2;
  //总收益
  double all_profit = 3;
}

//我的用户
message PromotionUser{
  //ID
  int32 id = 1;
  //用户名
  string username = 2;
  //昵称
  string nickname = 3;
  //头像id
  int32 avatar_id = 8;
  //最后在线时间
  int64 last_online_time = 4;
  //加入工会时间
  int64 join_promotion_time = 5;
  //状态 0=不在线 1=在线
  int32 status = 6;
  //是否禁言 1=不能说话 0=可以说话
  int32 authority = 7;
}

//工会信息
message PromotionInfo{
  //头像id
  int32 portrait_id = 1;
  //工会名称
  string promotion_name = 2;
  //简介
  string description = 3;
  //成员增加捕鱼洗码率
  double add_fish_rate = 4;
  //成员增加老虎机洗码率
  double add_slots_rate = 5;
  //捕鱼的返利率
  double settlement_fish_rate = 6;
  //老虎机的返利率
  double settlement_slots_rate = 7;
}


//每日签到定义
message EverydaySignInMoneyConfig{
  //天
  int32 day = 1;
  //送的金币
  double money = 2;
}


//玩家赠送金币记录
message LogGiftMoneyToAccount{
  //  id
  int32 id = 1;
  //赠送金币玩家
  int32 give_account_id = 2;
  //获赠金币玩家
  int32 received_account_id = 3;
  //赠送金额
  double money = 4;
  //赠送时间
  int64 create_time = 5;
}


//常见问题
message FAQItem{
  //Id
  int32 id = 1;
  //问题
  string question = 2;
  //回答
  string answer = 3;
  //图片列表
  string images = 4;
}



//洗码赠送绑定金币等级信息
message DailyWashCodeActivityLevel{
  //洗码量
  double wash_code_level = 1;
  //赠送量
  double give_wash_code = 2;
}



//玩家的游戏任务信息
message AccountActivityStatus{
  //活动id
  int32 activity_id = 1;
  //上个任务id
  int32 prev = 2;
  //游戏等级,为0表示所有等级
  int32 game_id = 3;
  //位置号,位0表示所有位置
  int32 table_id = 4;
  //vip 等级,为0表示所有等级,否则>=此等级才能参与
  int32 vip_level = 6;
  //鱼类型 2选1
  int32 fish_type = 7;
  //鱼类型 2选1
  int64 fish_bet = 8;
  //炮值,为0表示所有炮值
  int64 cannon_bet = 9;
  //需要打死多少条 不可填0 填0此条无效
  int32 need_count = 10;
  //送多少奖励
  double give_wash_code = 11;
  //是否开启此规则0=不开 1=开
  int32 is_open = 12;
  //给客户端文字配置
  string config = 13;
  //当前数量
  int32 current_count = 14;
  //是否已领取 0=未领取 1=已领取
  int32 is_receive = 15;
  //游戏类型 1=捕鱼 2=老虎机
  int32 game_type = 16;
  //老虎机倍率 0表示所有
  int64 slots_bet_money = 17;
  //老虎机此次赢了满足多少 0表示所有
  int64 slots_win_money = 18;
  //老虎机 彩金类型 0表示所有
  int32 slots_lottery_type = 19;
  //老虎机 彩金id 0表示所有
  int32 slots_lottery_id = 20;
  //旋转类型 (自己配) 0表示所有
  int32 slots_spin_type = 21;
}


//玩家的返利信息
message SettlementMember{
  //id
  int32 account_id = 1;
  //玩家昵称
  string name = 2;
  //总共老虎机洗码量
  double slots_wash_code = 3;
  //总共捕鱼洗码量
  double catchfish_wash_code = 4;
  //总共返利量
  double settlement_value = 5;
  //昨日老虎机洗码量
  double yesterday_slots_wash_code = 6;
  //昨日捕鱼洗码量
  double yesterday_catchfish_wash_code = 7;
  //昨日返利量
  double yesterday_settlement_value = 8;
}

//返利日记记录
message ReceiveSettlementLog{
  // 时间
  int64 time = 1;
  // 返利值
  double give_wash_code = 2;
}

//聊天用户信息
message ChatPlayerInfo{
  //用户id
  int32 account_id = 1;
  //用户VIP等级
  int32 vip_level = 2;
  //头像id
  int32 avatar_id = 3;
  //昵称
  string nickname = 4;
  //金币
  double money = 5;
  //是否是商人 1=商人 0不是
  int32 is_businessman = 6;
  //当前是否在线 1=在线 0=不在线
  int32 is_online = 7;
}

//聊天群
message ChatGroup {
  //群id
  int64 id = 1;
  //群名称
  string name = 2;
  //人数
  int32 member_count = 3;
  //是否需要邀请码 0==没有 1=有
  int32 has_join_code = 4;
}

//聊天用户信息
message GroupMemberInfo{
  //用户id
  int32 account_id = 1;
  //用户VIP等级
  int32 vip_level = 2;
  //头像id
  int32 avatar_id = 3;
  //昵称
  string nickname = 4;
  //金币
  double money = 5;
  //权限 0=普通成员 1=群主 2=管理
  int32 authority = 6;
  //当前是否在线 1=在线 0=不在线
  int32 is_online = 7;
  //是否禁言 1=禁言
  int32 state = 8;
}

//银商公告
message BusinessManNotice{
  //时间戳
  int64 time = 1;
  //发件人
  int32 source_id = 2;
  //头像id
  int32 source_avatar_id = 3;
  //昵称
  string source_nickname = 4;
  //内容
  string content = 5;
}

//公共聊天记录
message PublicMessage{
  //时间戳
  int64 time = 1;
  //发件人
  int32 source_id = 2;
  //头像id
  int32 source_avatar_id = 3;
  //昵称
  string source_nickname = 4;
  //是否是商人 1=商人 0不是
  int32 source_is_businessman = 5;
  //内容
  string content = 6;
  //金币
  double money = 7;
  //VIP等级
  int32 vip_level = 8;
}

//私聊聊天记录
message PrivateMessage{
  //时间戳
  int64 time= 1;
  //发件人
  int32 source_id= 2;
  //头像id
  int32 source_avatar_id= 3;
  //昵称
  string source_nickname= 4;
  //是否是商人 1=商人 0不是
  int32 source_is_businessman= 5;
  //目标玩家
  int32 target_id= 6;
  //内容
  string content= 7;
  //金币
  double money= 8;
  //VIP等级
  int32 vip_level= 9;
}

//代理提成详情
message AgentIncomeDayInfo{
  //当前日期的时间戳
  int64 day=1;
  //玩家id
  int32 account_id=2;
  //有效押注
  double bet=3;
  //贡献佣金
  double contribute_rebate=4;
}

//推荐详情
message AgentRecommendInfo{
  //玩家id
  int32 account_id = 1;
  //绑定时间
  int64 create_time = 3;
  //累积充值绑定时间到现在,不超过30天
  double total_recharge = 4;
  //奖金
  double reward = 5;
  //是否领取 -1 表示不能领取 0表示可以领取 1表示已领取
  int32 is_receive = 6;
  // 推荐一次性充值满额奖励
  double once_recharge_reward = 7;
  // 是否完成了 一次性充值满额奖励
  int32 is_complete_once_recharge = 8;
  // 是否领取了一次性性充值满额奖励
  int32 is_receive_once_recharge_reward = 9;
}

// 代理统计信息
message AgentStatisticsData {
  // 当前人数
  int64 number = 1;
  // 有效押注
  double bet = 2;
  // 佣金总数
  double rebate = 3;
}

// 代理统计信息
message AgentStatisticsDataDay {
  /// 日期
  int64 day=1;
  // 当前人数
  int64 number = 2;
  // 有效押注
  double bet = 3;
  // 佣金总数
  double rebate = 4;
}

/// 被推荐人一次性满额充值,推荐人奖励
message OnceRechargeReward{
  // 小时
  int32 hour=1;
  // 奖励
  double reward=2;
}