syntax = "proto3";

import "ClassDef.proto";

package PB.ServerClient;

// 登录回复
message LoginAck {
  enum MsgId {None = 0; Id = 1002;}
  // 自己的玩家id
  uint32 player_id = 1;
  // 通道列表
  repeated PB.ClassDef.Tunnel tunnel_list = 2;
}

// 管理员登录回复
message ManagementLoginAck {
  enum MsgId {None = 0; Id = 1006;}
  // 错误码 0成功
  int32 code = 1;
}

// 修改通道通知
message ModifyTunnelNtf {
  enum MsgId {None = 0; Id = 1008;}
  // 是否是删除通道，如果不是则表示新增或更新通道信息
  bool is_delete = 1;
  // 通道信息
  PB.ClassDef.Tunnel tunnel = 2;
}